--- a/Registro-maestro.html
+++ b/Registro-maestro.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
     <link rel="stylesheet" href="header.css">
 </head>
+
 <body>
     <header id="main-header" href="#">
         <a id="logo-header" href="#">
-            <span class="site-name">Wikiprofes 2.0</span>
-        </a>
-
-        <!--Header del logo-->
-        <nav>
-            <ul>
-                <li><a href="#">Top Profes</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Terminos y condiciones</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1 class="h1"></h1>
-    <div class="flexsearch">
-        <div class="flexsearch--wrapper">
-            <form class="flexsearch--form" action="#" method="post">
-                <div class="flexsearch--input--wrapper">
-                    <input class="flexsearch--input" type="Busqueda" placeholder="Busqueda">
-                </div>
-                <input class="flexsearch--submit" type="submit" value="&#10140">
-            </form>
-        </div>
-    </div>
+<h1 class="h1">Wikiprofes 2.0</h1>
 
     <!--Registro de Maestros-->
     <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1>Registrar profesor</h1>
+                <form id="FormularioParaMaestros" method="post">
+                    <div class="mb-3">
+                        <!--<label for="Nombre" class="form-label">Nombre del profesor.</label>
+                        <input type="Nombre" class="form-control" id="Nombre" aria-describedby="NombreHelp">-->
 
-    
+                        <!-- Select -->
+                        <!--<label for="Materia" class="form-label">Materia que imparte el profesor.</label>
+                        <select class="form-select" aria-label="Default select example">-->
+                            <!--<option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>-->
+                        </select>
+
+
 <div class="row">
     <form id="FormularioParaMaestros" method="post">
         <div class="mb-3">
@@ -51,12 +49,24 @@
           <div id="emailHelp" class="form-text">Direccion de correo electronico del profesor.</div>
         </div>
         <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Acepto las politicas establecidas para solicitar un registro.</label>
+                        <label for="exampleInputEmail1" class="form-label">Descripcion del profesor</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">Breve descripcion del profesor a registrar.</div>
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Acepto las politicas establecidas para solicitar
+                            un registro.</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Registrar</button>
+                    <button type="submit" class="btn btn-danger">Cancelar</button>
+                </form>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Registrar</button>
       </form>
 </div>
 </div>
+    </div>
 </body>
-</html>
+
+</html> 
